[package]
name = "polygon-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ethers = "2.0.7"
log = "0.4.19"
pretty_env_logger = "0.5.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
ethers = { version = "2.0.7", features = ["ethers-solc"]}
anyhow = "1.0.69"
serde = "1.0.152"
serde_json = "1.0.94"
